# txtosqlbot

./: README.md  app.py  pyproject.toml  requirements.txt  validate_api_key.py
.streamlit/: config.toml
assets/: style.css
txtosqlbot/: agent.py  config.py  models.py  tools.py
